[package]
name = "os4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6.0" # buddy system allocator for heap allocation
log = "0.4.14"
# riscv = "0.9.0" # how to use this?
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

bitflags = "1.2.1"
lock_api = "=0.4.6"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }

# [profile.release]
# debug = true
# opt-level = 0